--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
