--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "2.1.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "use-http": "^1.0.28"
   },
   "scripts": {
     "start": "react-scripts start",
