--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^5.1.6",
     "use-http": "^1.0.28"
   },
