--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "@types/babel__core": "^7.20.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "tailwindcss": "^3.3.3"
   }
 }
