--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/babel__core": "^7.20.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.3.3"
