--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,10 @@
   ],
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/babel__core": "^7.20.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.3.3"
