--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,15 @@
     "build": "react-scripts build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "plugin:react-hooks/recommended"
+      "plugin:react-hooks/recommended",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": [
@@ -36,12 +39,25 @@
   ],
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@storybook/addon-essentials": "7.6.20",
+    "@storybook/addon-interactions": "7.6.20",
+    "@storybook/addon-links": "7.6.20",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "7.6.20",
+    "@storybook/preset-create-react-app": "7.6.20",
+    "@storybook/react": "7.6.20",
+    "@storybook/react-webpack5": "7.6.20",
+    "@storybook/test": "7.6.20",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/babel__core": "^7.20.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "tailwindcss": "^3.3.3"
+    "eslint-plugin-storybook": "^0.9.0",
+    "prop-types": "^15.8.1",
+    "storybook": "7.6.20",
+    "tailwindcss": "^3.3.3",
+    "webpack": "^5.95.0"
   }
 }
