--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,9 +55,34 @@
     "@types/babel__core": "^7.20.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.9.0",
+    "loki": "^0.35.1",
     "prop-types": "^15.8.1",
     "storybook": "7.6.20",
     "tailwindcss": "^3.3.3",
     "webpack": "^5.95.0"
+  },
+  "loki": {
+    "storiesFilter": "Pages/*",
+    "configurations": {
+      "large": {
+        "target": "chrome.app",
+        "width": 1400,
+        "height": 800,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "medium": {
+        "target": "chrome.app",
+        "width": 1200,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "small": {
+        "target": "chrome.app",
+        "preset": "iPhone 7",
+        "deviceScaleFactor": 1
+      }
+    }
   }
 }
