arrange loki tolerance

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
   },
   "loki": {
     "storiesFilter": "Pages/*",
+    "chromeTolerance": 30,
     "configurations": {
       "large": {
         "target": "chrome.app",
